--- a/client/src/scss/control.scss
+++ b/client/src/scss/control.scss
@@ -5,7 +5,7 @@
   opacity: 0;
   overflow: hidden;
   position: absolute;
-  z-index: -1;
+  z-index: z(bottomless-pit);
 }
 
 .file-label {
@@ -15,6 +15,7 @@
 }
 
 .tip-tip {
+  z-index: z(hover);
   background-color: $gray-r200;
   color: $gray-700;
   pointer-events: none;
